css/style.css
/* Document
   ========================================================================== */

/**
 * 1. Correct the line height in all browsers.
 * 2. Prevent adjustments of font size after orientation changes in iOS.
 */

html {
	line-height: 1.15; /* 1 */
	-webkit-text-size-adjust: 100%; /* 2 */
	font-size: 12px;
}

*,
*::before,
*::after {
	box-sizing: border-box;
	margin: 0;
	padding: 0;
}

/* Sections
   ========================================================================== */

/**
 * Remove the margin in all browsers.
 */

body {
	margin: 0;
}

/**
 * Render the `main` element consistently in IE.
 */

main {
	display: block;
}

/**
 * Correct the font size and margin on `h1` elements within `section` and
 * `article` contexts in Chrome, Firefox, and Safari.
 */

h1 {
	font-size: 2em;
	margin: 0.67em 0;
}

:root {
	--very-dark-grayish-blue: hsl(217, 19%, 35%);
	--desaturated-dark-blue: hsl(214, 17%, 51%);
	--grayish-blue: hsl(212, 23%, 69%);
	--light-grayish-blue: hsl(210, 46%, 95%);
	--color: #000;
	--shadowColor: 0px 10px 50px 0px rgba(var(--color), 0.08);
}

h1 {
	padding-right: 1rem;
	font-size: 1.25rem;
	line-height: 1.3;
}

body {
	display: flex;
	justify-content: center;
	flex-direction: column;
	align-items: center;
	font-family: "Manrope", sans-serif;
	font-weight: 500;
	background-color: var(--light-grayish-blue);
	min-height: 100vh;
}

.card {
	/* margin: 4rem 1.5rem; */
	margin: 2rem 1.5rem;
	max-width: 730px;
	border-radius: 0.5rem;
	background-color: white;
	-webkit-box-shadow: 2px 5px 49px 1px rgba(10,26,80,0.1);
	-moz-box-shadow: 2px 5px 49px 1px rgba(10,26,80,0.1);
	box-shadow: 2px 5px 49px 1px rgba(10,26,80,0.1);
	display: flex;
	flex-direction: column;
}

.card__img {
	overflow: hidden;
	border-top-left-radius: 0.5rem;
	border-top-right-radius: 0.5rem;
}

/*
	Card Info
*/
.card__info {
	padding: 1rem;
}

.card__info__title {
	color: var(--very-dark-grayish-blue);
	font-size: 1.2rem;
}
.card__info__subtitle {
	color: var(--grayish-blue);
	font-size: 1rem;
	font-weight: 400;
	line-height: 1.8rem;
}

/*
	Card Author
*/

.card__author {
	position: relative;
	display: flex;
	justify-content: center;
	padding: 10px;
	align-items: center;
	width: 100%;
	border-bottom-right-radius: 20px;
	border-bottom-left-radius: 20px;
	position: relative;
}

.card__author__content {
	display: flex;
	justify-content: space-between;
	align-items: center;
	padding: 1rem 1rem 1rem 1rem;
	width: 100%;
}

.card__author__image {
	width: 2.5rem;
	height: 2.5rem;
	border-radius: 50%;
}

.card__author__heading {
	color: var(--very-dark-grayish-blue);
	font-size: 1rem;
}

.card__author__description {
	color: var(--grayish-blue);
	font-size: 0.8rem;
}

.card__img img {
	max-width: 100%;
	width: 100%;
}

.card__author__share {
}

.card__author__share__description {
	text-transform: uppercase;
	color: var(--grayish-blue);
	font-size: 0.8rem;
}

.card__author__share--show {
	width: 100%;
	position: absolute;
	height: 100%;
	/* margin-left: -1rem; */
	background-color: var(--very-dark-grayish-blue);
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	padding: 1rem;
	border-bottom-left-radius: 0.5rem;
	border-bottom-right-radius: 0.5rem;
}

.card__author__share__content {
	display: none;
}

.card__author__share--show .card__author__share__content {
	/* 	display: flex;
	flex-direction: row;
	justify-content: space-around; */
	width: 75%;
	display: flex;
	flex-direction: row;
	align-items: center;
	justify-content: space-between;
}

.card__author__sharebutton {
	width: 2.5rem;
	height: 2.5rem;
	border-radius: 50%;
	background-color: var(--light-grayish-blue);

	display: flex;
	justify-content: center;
	align-items: center;
}

.card__author__sharebutton:hover {
	background-color: var(--grayish-blue);
}

.card__author__sharebutton svg {
	fill: var(--grayish-blue);
}

.card__author__sharebutton:hover svg {
	fill: #fff;
}

.card__author__sharebutton--show {
	z-index: 1;
	background-color: var(--grayish-blue);
}

.card__author__sharebutton--show svg {
	fill: #fff;
}

.container {
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
}

@media only screen and (min-width: 768px) {
	.card {
		flex-direction: row;
	}

	.card__img {
		max-width: 40%;
		border-top-left-radius: 0.5rem;
		border-top-right-radius: 0;
		border-bottom-left-radius: 0.5rem;
	}

	.card__img img {
		height: 100%;
		max-height: 100%;
	}

	.container {
		max-width: 658px;
		width: 100%;
		padding-right: 15px;
		padding-left: 15px;
		margin-right: auto;
		margin-left: auto;
	}

	.card__author__share--show {
		top: -35px;
		width: 170px;
		height: 50px;
		right: -49px;
		border-radius: 0.5rem;
		padding: 14px 30px;
	}

	.card__author__share--show .card__author__share__content {
		width: 100%;
	}

	.card__author__share--show::before {
		content: "";
		position: absolute;
		left: 80px;
		top: 50px;
		width: 0;
		height: 0;
		border-left: 0.5rem solid transparent;
		border-right: 0.5rem solid transparent;
		border-top: 0.5rem solid var(--very-dark-grayish-blue);
		clear: both;
	}
}

